* distribute, python-eeml, simplejson, pyrrd, mako: odstraněny, distribute nahrazeno setuptools.
* python-twisted: compile-time závislost na distribute nahrazena setuptools (nemělo by mít vliv na funkci).
* python-setuptools, python-pip: nové balíčky
* Foris (v58): podpora pro podporu více kanálů v pásmu 5 GHz.
* wifi: Podpora více kanálů v pásmu 5GHz
* nuci: Podpora pro více jazyků firewallových pravidel
* majordomo: Hotfix chyby, která způsobuje odmazávání dat
* ucollect: Oprava zjišťování online stavu
* ucollect: Zlepšení řešení chyb v pluginech
* ucollect: Podpora knihoven pro pluginy
* Foris (v57): Oprava validátoru MAC adresy.
* Tvheadend: fix zapomenuté instalace /etc/config/tvheadend.
* Python 3: backport z upstreamu (Python 3.4.3).
* kernel: zapnutí podpory pro physdev iptables modul
===================== 2.5 =======================
* ucollect: Pozdržení posílání dat při ztrátě spojení
* mitmproxy: workaround pro firewallový redirect, který přestal fungovat
* python-twisted: fix závislostí
* tor: update na 0.2.6.10
* Domoticz: nový balíček pro Turris Gadgets (+ přidán Boost - závislost Domoticzu).
* git: backport verze 2.4.6-1 z upstreamu (branch master).
* Foris (v56): drobné opravy - na záložce updater a ve filtrování hesel v error reportu.
* updater: Protizasekávací skript
* nuci: Dává k dispozici seznam PCAPů
* majordomo: Při migraci je schopen využít cache, která zůstala z předchozích verzí programu.
* majordomo: Seznam dostupných MAC adres se bere z cache a nezískává se z DB jako doposud. Jedná se o mnohem rychlejší řešení.
* majordomo: Nevytváří pravidelně zneplatňovanou cache PTR záznamů, ale adresy rovnou ukládá do DB k jednotlivým zázamům. Tato implementace rapidně snižuje paměťovou náročnost a vytížení sítě.
* majordomo: "Nezatajuje" chyby v konfiguraci
* Tvheadend: aktualizace na stabilní verzi 4.0.5.
* nuci-tls: Možnost pouštět nuci jako TLS server
* Kernel: podpora pro vybrané DVB (resp. DVB USB) tunery.